<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="inm7.Jutrack.jutrack_Social.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_leave_study"
        android:orderInCategory="100"
        android:title="@string/action_leave_study"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/manual_sync"
        android:orderInCategory="100"
        android:title="@string/manual_sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/active_monitoring"
        android:orderInCategory="100"
        android:title="labeling"
        app:showAsAction="never" />
</menu>
