<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Teilnehmernummer">

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="UserName_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />


        <ListPreference

            android:entries="@array/pref_record_rate_list"
            android:entryValues="@array/pref_example_list_values"
            android:defaultValue="10000"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_record_rate" />
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
                       dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    </PreferenceCategory>
    <PreferenceCategory android:title="Steuerung der Aufzeichnung">

        <SwitchPreference
            android:defaultValue="true"
            android:key="restartSensorService_switch"
            android:summary="@string/pref_description_social_recommendations"
            android:title="Automatischer Neustart-Dienst?" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="manual_ActiveLabeling_switch"
            android:summary="@string/pref_description_Manual_ActiveLabeling"
            android:title="Manual Active Labeling?" />


        <SwitchPreference
            android:defaultValue="false"
            android:key="movementDetection_switch"
            android:summary="@string/pref_description_MovementDetection"
            android:title="detect movement?" />

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
                       dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    </PreferenceCategory>



   <PreferenceCategory android:title="Netzwerk-Präferenz">
       <SwitchPreference
           android:defaultValue="false"
           android:key="switch_preference_phoneData"
           android:title="Telefonnetz verwenden" />
   </PreferenceCategory>

    <PreferenceCategory android:title="Optimierung des Batterieverbrauchs (nicht ändern) ">
        // should be false at first
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_skipProtectedAppCheck"
            android:title=" Prüfung geschützter Anwendungen überspringen." />
    </PreferenceCategory>



    <PreferenceCategory android:title="Verfügbare Dienste">
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_Location"
            android:title="Standort" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_ActivityDetection"
            android:title="Aktivitäts-Erkennung" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_AppUsage"
            android:title="Verwendung der Anwendung" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_Acceleration"
            android:title="@string/Accelerometer" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_Gyroscope"
            android:title="@string/Gyroscope" />
    </PreferenceCategory>

</PreferenceScreen>
